# realty-redux

./: .gitignore  pyproject.toml
extension/: download.html  manifest.json
extension/scripts/: realtorDotCom.js  save.js
src/realty_redux/: Report.py  __main__.py  scrape.py
src/realty_redux/app/: __init__.py  index.py
src/realty_redux/app/static/: index.js
src/realty_redux/app/templates/: base.html  index.html
src/realty_redux/common/calculations/: LinearRegression.py  __init__.py  calculations.py
src/realty_redux/common/sql/: BaseConnector.py  DBConnector.py  SQLiteConnector.py  __init__.py
src/realty_redux/scrape/realtor_dot_com/: Buy.py  java_script.py  js.py
src/realty_redux/scrape/realtor_dot_com/js/: parseCards.js
src/realty_redux/scrape/realtor_dot_com/sql/: DBBuilder.py  sql_definitions.py
src/realty_redux/ui/: __init__.py  report.py
src/realty_redux/ui/static/report/: index.js
src/realty_redux/ui/templates/: index.html
